--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,6 @@ captures/
 # IntelliJ
 *.iml
 .idea
-.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -72,3 +71,4 @@ fastlane/readme.md
 vcs.xml
 
 .DS_Store
+.DS_Store?
