--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -20,7 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
